# char_db

./: .gitignore  CMakeLists.txt  README.adoc  README.md  TODO.adoc  TODO.md  example.cc  example.cpp  meson.build  pyproject.toml
cmake/: char_db-config.cmake.in  char_dbConfig.cmake.in  install.cmake  ucd_gen.cmake
include/: char_db.hh  char_db.hpp
include/char_db/: database.hh  database.hpp  database.tcc  std_expo.hh  std_expo.hpp  std_expo.tcc  views.hh  views.hpp  views.tcc
include/char_db/_container/: fixed_string.hh  fixed_string.tcc  succinct_bitset.hh  succinct_bitset.tcc
src/: char_db.cc  containers.cc  database.cc  utils.cc  views.cc
tools/: ucd_gen.py
